--- a/index.html
+++ b/index.html
@@ -1,12 +1,371 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>jackai的网页</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="keywords" content="web前端个人简历,web前端,晁振凯简历,Kita,前端个人博客,前端工程师,晁振凯">
+    <meta name="description" content="晁振凯Web前端工程师的个人简历">
+    <meta name="author" content="晁振凯,Kita">
+    <meta name="baidu_union_verify" content="f03e2182f45cfe87497180a7c9bc0065">
+    <meta name="baidu-site-verification" content="CzB4DK7FdK" />
+    <meta name='360_ssp_verify' content='e5291864060c4e9207fef840eeeca384' />
+    <title>Web前端工程师</title>
+    <link rel="icon" href="./image/icon.png">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/base.css" type="text/css">
+    <link rel="stylesheet" href="css/cv.css">
+    <style>
+        /* .beian a{
+            font-size: 16px;
+            color: blue;
+        } */
+        .myphoto{cursor: pointer}
+    </style>
 </head>
+
 <body>
-    <h1>开开的网页</h1>
+    <audio src="./image/01.mp3" autoplay="autoplay" loop="loop"></audio>
+    <span id="off" style="position:fixed;z-index:100;right:10px;top:10px;cursor:pointer;width:30px;height:30px;background-image:url(image/on.png);background-size:100% 100%"></span>
+    <div class="content ">
+        <div class="cv-container">
+            <div id="section1" class="section active">
+                <div id="top" title="顶部">
+                    <img src="image/top.png" alt="回到顶部">
+                </div>
+                <div class="myIntro">
+                    <h1 class="fade">Hello, I'm Kita</h1>
+                    <h3 class="fade">一个拥有信心与耐心的前端工程师</h3>
+                    <span class="active fade" id="abMe">关于我</span>
+                    <span id="mypro" class="fade">我的作品</span>
+                </div>
+                <ul class="bg-img">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div id="section2" class="section">
+                <!-- 导航条-->
+                <div id="nav-bar" class="bar">
+                    <div class="container">
+                        <!-- <a href="http://earthstudio.cn" target="_blank">
+                            <div class="fl">Kita博客</div>
+                        </a> -->
+                        <ul class="fr nav-ul">
+                            <li>关于我</li>
+                            <li>求职意向</li>
+                            <li>作品集</li>
+                            <li>技术掌握</li>
+                            <li>我的经历</li>
+                            <li>联系我</li>
+                        </ul>
+                        <div class="fr more-nav">
+                            <img src="image/more.png" alt="更多">
+                        </div>
+                    </div>
+                    <ul class="nav-ul nav-xs-ul">
+                        <li>关于我</li>
+                        <li>求职意向</li>
+                        <li>作品集</li>
+                        <li>技术掌握</li>
+                        <li>我的经历</li>
+                        <li>联系我</li>
+                    </ul>
+                </div>
+
+                <!--关于我-->
+                <h2>关于我</h2>
+                <hr>
+                <div class="center fades">
+                    <p class="center">
+                        <img class="myphoto" src="image/mypic.jpg" alt="头像" title="晁振凯" />
+                    </p>
+                    <div class="my-intro">
+                        <p>我叫晁振凯，24岁，坐标河南省会郑州，是一名前端开发工程师。前端是一门有容乃大的行业，大学时期我并不是计算机专业出身。 在自学前端之前，唯一接触过的就是大学里的C语言。庆幸的是JS与C很相像，给我很大的信心来学习,大二在学校网络部门意外发现一位学长搭建网站,
+                        随即产生了兴趣,从此奔上了前端之路。毕业后,带着青春的梦想与活力来到首都北京，并开始正式的前端开发之路，在工作中与时俱进，不断学习新技术，时刻提醒自己，做技术好比逆水行舟，不进则退，这也是我积累了一定的工作经验。也使我对未来的生活充满希望！
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div id="section3" class="section">
+                <h2>求职意向</h2>
+                <hr>
+                <div class="container center fades">
+                    <div class="col-md-3 col-xs-6 skill-web skill">
+                        <p><img src="image/css.png" alt="css"></p>
+                        <p class="ptitle">网页制作</p>
+                        <p>响应式页面,简单不冗余代码。</p>
+                        <p>css3流畅动画效果，兼容不同浏览器。</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6 skill-js skill">
+                        <p><img src="image/js.png" alt="js"></p>
+                        <p class="ptitle">前端功能</p>
+                        <p>用JS完成常见的前端功能特效</p>
+                        <p>用AJAX读取后台数据。</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6 skill-h5 skill">
+                        <p><img src="image/h5.png" alt="h5"></p>
+                        <p class="ptitle">h5页面</p>
+                        <p>移动端页面的书写</p>
+                        <p>兼容平板、安卓、IOS不同终端。</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6 skill-ps skill">
+                        <p><img src="image/web.png" alt="切图"></p>
+                        <p class="ptitle">框架开发</p>
+                        <p>利用vue，react，iView，elementUI</p>
+                        <p>等框架，对页面进行开发</p>
+                    </div>
+                </div>
+            </div>
+            <div id="section4" class="section">
+                <h2>作品集</h2>
+                <hr>
+                <div class="container center fades">
+                    <p class="center intros">在写项目时,我的原则是能用jQuery的就要用jQuery,能用vue的就要用vue,最好利用框架来写,这样既可以提高效率,也可以不断学习新技术,与时俱进,不至于原地踏步走!</p>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="imgbox">
+                            <img src="image/08.jpg" alt="映霜红桃">
+                        </div>
+                        <a href="http://nhxngs.com" target="_blank">
+                            <div class="zp-cover">
+                                <h4>企业官网</h4>
+                                <p>利用vue，iView，jQuery及Amap等技术开发的企业官网</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="imgbox">
+                            <img src="image/01.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://www.homebank.shop/" target="_blank">
+                            <div class="zp-cover">
+                                <h4>商城类页面</h4>
+                                <p>页面调试与修改，购物车的结算等功能。（二开项目）</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="imgbox">
+                            <img src="image/06.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://car.maomiquan.top/" target="_blank">
+                            <div class="zp-cover" style="top: 45%">
+                                <h4>数据交互类</h4>
+                                <p>AJAX获取后台数据，利用ajax请求将后台数据请求回来,并展示在HTML页面中,利用vue实现单页面跳转。</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6 ">
+                        <div class="imgbox">
+                            <img src="image/02.jpg" alt="作品配图">
+                        </div>
+                        <a href="https://www.tripadvisor.cn/" target="_blank">
+                            <div class="zp-cover">
+                                <h4>企业类页面</h4>
+                                <p>旅游网页面采用响应式布局实现电脑端和手机端，css3 JS运用较多</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6 ">
+                        <div class="imgbox">
+                            <img src="image/03.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://www.yuncars.cn/" target="_blank">
+                            <div class="zp-cover">
+                                <h4>列表类页面</h4>
+                                <p>以列表的形式展示产品使人一目了然</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6 ">
+                        <div class="imgbox">
+                            <img src="image/04.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://www.huakeyi.com/" target="_blank">
+                            <div class="zp-cover">
+                                <h4>官网类页面</h4>
+                                <p>同样的框架,不一样的语言，利用jQuery实现页面效果。</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-xs-6 ">
+                        <div class="imgbox">
+                            <img src="image/05.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://4000500521.com" target="_blank">
+                            <div class="zp-cover">
+                                <h4>官网类首页</h4>
+                                <p>利用jQuery及相关插件实现页面的动态效果</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-md-3 col-xs-6 ">
+                        <div class="imgbox">
+                            <img src="image/07.jpg" alt="作品配图">
+                        </div>
+                        <a href="http://chaozhenkai.com/waimai/index.html" target="_blank">
+                            <div class="zp-cover">
+                                <h4>移动端页面</h4>
+                                <p>列表页，兼容安卓、ios、平板</p>
+                                <img src="image/search.png" alt="查看">
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+            <div id="section5" class="section">
+                <h2>技术掌握</h2>
+                <hr>
+                <div class="container center fades">
+                    <div class="col-md-3 col-xs-6">
+                        <div class="wrap-box">
+                            <div class="circle-wrap clip-auto">
+                                <div class="left-clip percent"></div>
+                                <div class="right-clip percent"></div>
+                            </div>
+                            <div class="circle-num">
+                                <span>90</span>%
+                            </div>
+                        </div>
+                        <p class="ptitle">HTML5</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="wrap-box">
+                            <div class="circle-wrap clip-auto">
+                                <div class="left-clip percent"></div>
+                                <div class="right-clip percent"></div>
+                            </div>
+                            <div class="circle-num">
+                                <span>90</span>%
+                            </div>
+                        </div>
+                        <p class="ptitle">CSS3</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="wrap-box">
+                            <div class="circle-wrap clip-auto">
+                                <div class="left-clip percent"></div>
+                                <div class="right-clip percent"></div>
+                            </div>
+                            <div class="circle-num">
+                                <span>85</span>%
+                            </div>
+                        </div>
+                        <p class="ptitle">JQ</p>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="wrap-box">
+                            <div class="circle-wrap clip-auto">
+                                <div class="left-clip percent"></div>
+                                <div class="right-clip percent"></div>
+                            </div>
+                            <div class="circle-num">
+                                <span>80</span>%
+                            </div>
+                        </div>
+                        <p class="ptitle">JS</p>
+                    </div>
+                </div>
+            </div>
+            <div id="section6" class="section" style="box-sizing:border-box;height:890px">
+                <h2 style="">我的经历</h2>
+                <hr>
+                <div class="container center fades">
+                    <ul class="my-xp">
+                        <li>
+                            <div class="date-box">
+                                <p>09/2017</p>
+                                <p>-</p>
+                                <p>现在</p>
+                            </div>
+                            <div class="my-school my-xp-box">
+                                <strong>河南省惠家帮电子商务有限公司</strong>
+                                <p class="ptitle">技术部/Web前端开发工程师</p>
+                                <p>负责公司前端开发工作</p>
+                                <p>根据公司需求，对ecmall进行二次开发</p>
+                                <p>并将代码上传到代码托管平台上</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="date-box">
+                                <p>06/2015</p>
+                                <p>-</p>
+                                <p>08/2017</p>
+                            </div>
+                            <div class="my-work my-xp-box">
+                                <strong>北京创思恒通科技有限公司</strong>
+                                <p class="ptitle">技术部/Web前端开发工程师</p>
+                                <p>负责前端开发工作，使用jQuery、vue等实现高性能的交互逻辑</p>
+                                <p>根据产品需求，开发h5页面兼容于目前主流浏览器的前端页面</p>
+                                <p>并将代码上传到代码托管平台上</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="date-box">
+                                <p>06/2011</p>
+                                <p>-</p>
+                                <p>09/2015</p>
+                            </div>
+                            <div class="my-school my-xp-box">
+                                <strong>郑州大学</strong>
+                                <p class="ptitle">大学本科</p>
+                                <p>荣获校级科技大赛项目二等奖</p>
+                                <p>被校网络管理中心评为"优秀工作者"</p>
+                                <p></p>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+            <div id="section7" class="section">
+                <h2>联系我</h2>
+                <hr>
+                <div class="container center fades">
+                    <div class="flow">
+                        <!-- UY BEGIN -->
+                        <div id="uyan_frame"></div>
+                        <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2141683"></script>
+                        <!-- UY END -->
+                        <div class="half fr">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="center beian">© Kita | <a href="http://www.miitbeian.gov.cn">豫ICP备15030710号-4</a></p>
+    </div>
+    
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/mycv.js"></script>
+    <script>
+        document.getElementById('off').onclick=function(){
+           if(document.getElementById('off').style.backgroundImage=='url("./image/off.png")'){
+                document.getElementById('off').style.backgroundImage='url(./image/on.png)'
+                document.querySelector('audio').muted=false
+           }else{
+               document.getElementById('off').style.backgroundImage='url(./image/off.png)'
+               document.querySelector('audio').muted=true
+           }
+            
+        }
+        $('.myphoto').click(function(){
+            window.open('https://v.qq.com/x/page/s0163oqu2rh.html')
+        })
+    </script>
 </body>
+
 </html>
