--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="web前端个人简历,web前端,晁振凯简历,Kita,前端个人博客,前端工程师,晁振凯">
-    <meta name="description" content="晁振凯Web前端工程师的个人简历">
+    <meta name="keywords" content="web前端个人简历,晁振凯简历,Kita">
+    <meta name="description" content="各位大神们,大家好,我叫晁振凯,目前在河南省会郑州市,在H3C任职前端开发工程师,有志同道合的朋友欢迎交流交流...">
     <meta name="author" content="晁振凯,Kita">
     <meta name="baidu_union_verify" content="f03e2182f45cfe87497180a7c9bc0065">
     <meta name="baidu-site-verification" content="CzB4DK7FdK" />
@@ -85,8 +85,8 @@
                         <img class="myphoto" src="image/mypic.jpg" alt="头像" title="晁振凯" />
                     </p>
                     <div class="my-intro">
-                        <p>我叫晁振凯，24岁，坐标河南省会郑州，是一名前端开发工程师。前端是一门有容乃大的行业，大学时期我并不是计算机专业出身。 在自学前端之前，唯一接触过的就是大学里的C语言。庆幸的是JS与C很相像，给我很大的信心来学习,大二在学校网络部门意外发现一位学长搭建网站,
-                        随即产生了兴趣,从此奔上了前端之路。毕业后,带着青春的梦想与活力来到首都北京，并开始正式的前端开发之路，在工作中与时俱进，不断学习新技术，时刻提醒自己，做技术好比逆水行舟，不进则退，这也是我积累了一定的工作经验。也使我对未来的生活充满希望！
+                        <p>我叫晁振凯，28岁，坐标河南省会郑州，是一名前端开发工程师。前端是一门有容乃大的行业，大学时期我是通信工程专业出身。 在自学前端之前，唯一接触过的就是大学里的C语言。庆幸的是JS与C很相像，给我很大的信心来学习,大二在学校网络部门意外发现一位学长搭建网站,
+                        随即产生了兴趣,从此奔上了前端之路。毕业后,带着青春的梦想与活力来到省会郑州，并开始正式的前端开发之路，在工作中与时俱进，不断学习新技术，时刻提醒自己，做技术好比逆水行舟，不进则退，这也是我积累了一定的工作经验。也使我对未来的生活充满希望！
                         </p>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                                 <span>80</span>%
                             </div>
                         </div>
-                        <p class="ptitle">JS</p>
+                        <p class="ptitle">Vue框架</p>
                     </div>
                 </div>
             </div>
@@ -287,11 +287,25 @@
                     <ul class="my-xp">
                         <li>
                             <div class="date-box">
-                                <p>09/2017</p>
+                                <p>06/2018</p>
                                 <p>-</p>
                                 <p>现在</p>
                             </div>
                             <div class="my-school my-xp-box">
+                                <strong>新华三大数据有限公司(H3C)</strong>
+                                <p class="ptitle">技术部/Web前端开发工程师</p>
+                                <p>负责公司前端团队协作开发工作</p>
+                                <p>根据公司客户需求，利用vue在私有云环境中开发所需的组件,并配合后台进行数据交互联调</p>
+                                <p>测试通过后将代码合入主线,并上传到代码托管平台上</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="date-box">
+                                <p>06/2017</p>
+                                <p>-</p>
+                                <p>05/2018</p>
+                            </div>
+                            <div class="my-work my-xp-box">
                                 <strong>河南省惠家帮电子商务有限公司</strong>
                                 <p class="ptitle">技术部/Web前端开发工程师</p>
                                 <p>负责公司前端开发工作</p>
@@ -301,23 +315,9 @@
                         </li>
                         <li>
                             <div class="date-box">
-                                <p>06/2015</p>
+                                <p>06/2013</p>
                                 <p>-</p>
-                                <p>08/2017</p>
-                            </div>
-                            <div class="my-work my-xp-box">
-                                <strong>北京创思恒通科技有限公司</strong>
-                                <p class="ptitle">技术部/Web前端开发工程师</p>
-                                <p>负责前端开发工作，使用jQuery、vue等实现高性能的交互逻辑</p>
-                                <p>根据产品需求，开发h5页面兼容于目前主流浏览器的前端页面</p>
-                                <p>并将代码上传到代码托管平台上</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="date-box">
-                                <p>06/2011</p>
-                                <p>-</p>
-                                <p>09/2015</p>
+                                <p>07/2017</p>
                             </div>
                             <div class="my-school my-xp-box">
                                 <strong>郑州大学</strong>
