--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <hr>
                 <div class="center fades">
                     <p class="center">
-                        <img class="myphoto" src="image/mypic.jpg" alt="头像" title="晁振凯" />
+                        <img class="myphoto" src="image/mypic.jpg" alt="晁振凯" title="晁振凯" />
                     </p>
                     <div class="my-intro">
                         <p>我叫晁振凯，28岁，坐标河南省会郑州，是一名前端开发工程师。前端是一门有容乃大的行业，大学时期我是通信工程专业出身。 在自学前端之前，唯一接触过的就是大学里的C语言。庆幸的是JS与C很相像，给我很大的信心来学习,大二在学校网络部门意外发现一位学长搭建网站,
