修改个人简介错别字

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </p>
                     <div class="my-intro">
                         <p>我叫晁振凯，28岁，坐标河南省会郑州，是一名前端开发工程师。前端是一门有容乃大的行业，大学时期我是通信工程专业出身。 在自学前端之前，唯一接触过的就是大学里的C语言。庆幸的是JS与C很相像，给我很大的信心来学习,大二在学校网络部门意外发现一位学长搭建网站,
-                        随即产生了兴趣,从此奔上了前端之路。毕业后,带着青春的梦想与活力来到省会郑州，并开始正式的前端开发之路，在工作中与时俱进，不断学习新技术，时刻提醒自己，做技术好比逆水行舟，不进则退，这也是我积累了一定的工作经验。也使我对未来的生活充满希望！
+                        随即产生了兴趣,从此奔上了前端之路。毕业后,带着青春的梦想与活力来到省会郑州，并开始正式的前端开发之路，在工作中与时俱进，不断学习新技术，时刻提醒自己，做技术好比逆水行舟，不进则退，这也使我积累了一定的工作经验。也使我对未来的生活充满希望！
                         </p>
                     </div>
                 </div>
