--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <div class="container center fades">
                     <div class="col-md-3 col-xs-6 skill-web skill">
                         <p><img src="image/css.png" alt="css"></p>
-                        <p class="ptitle">网页制作</p>
-                        <p>响应式页面,简单不冗余代码。</p>
-                        <p>css3流畅动画效果，兼容不同浏览器。</p>
+                        <p class="ptitle">可视化开发</p>
+                        <p>利用echarts,highcharts,antv等工具</p>
+                        <p>开发可视化图表工具</p>
                     </div>
                     <div class="col-md-3 col-xs-6 skill-js skill">
                         <p><img src="image/js.png" alt="js"></p>
@@ -114,10 +114,10 @@
                         <p>兼容平板、安卓、IOS不同终端。</p>
                     </div>
                     <div class="col-md-3 col-xs-6 skill-ps skill">
-                        <p><img src="image/web.png" alt="切图"></p>
+                        <p><img src="image/web.png" alt="框架开发"></p>
                         <p class="ptitle">框架开发</p>
-                        <p>利用vue，react，iView，elementUI</p>
-                        <p>等框架，对页面进行开发</p>
+                        <p>利用vue，iView，elementUI</p>
+                        <p>等框架，进行单页面组件开发</p>
                     </div>
                 </div>
             </div>
@@ -215,10 +215,10 @@
                         <div class="imgbox">
                             <img src="image/07.jpg" alt="作品配图">
                         </div>
-                        <a href="http://chaozhenkai.com/waimai/index.html" target="_blank">
+                        <a href="javascript:(alert('因涉及信息安全问题,此项目没有外链!'))">
                             <div class="zp-cover">
-                                <h4>移动端页面</h4>
-                                <p>列表页，兼容安卓、ios、平板</p>
+                                <h4>机器数据分析决策系统开发</h4>
+                                <p>利用vue,iview对系统内页面及公共组件进行开发</p>
                                 <img src="image/search.png" alt="查看">
                             </div>
                         </a>
