--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="imgbox">
                             <img src="image/06.jpg" alt="作品配图">
                         </div>
-                        <a href="http://car.maomiquan.top/" target="_blank">
+                        <a href="http://www.earthstudio.cn/jiakao/" target="_blank">
                             <div class="zp-cover" style="top: 45%">
                                 <h4>数据交互类</h4>
                                 <p>AJAX获取后台数据，利用ajax请求将后台数据请求回来,并展示在HTML页面中,利用vue实现单页面跳转。</p>
